--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,28 @@
     <meta author="Mike Hovenier">
     <title>TUI Reizen</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body>
     <header>
         <nav class="navigation-header">
             <ul>
-                <li><svg class="logo" viewBox="0 0 214 172"><defs><style>.cls-1{fill:#d40e14;}</style></defs><title>master_PICT_A3CPM</title><path class="cls-1" d="M10.76,48.32H61.32c5,0,8.69,1.57,10.16,8.61,1.63,7.83,1,13.28-7.85,13.9L47.76,72c11.68,73.82,80,97.88,117.18,18.38,6.16-13.16,8.17-15.56,14.91-13.88,9.14,2.27,10.39,7,6,20.24-32.16,98-140.23,107.83-161.43-23.05l-12.89.93c-10.49.75-10.91-8.1-10.91-13,0-9.74,3.61-13.22,10.11-13.22h0Z"/><path class="cls-1" d="M194.58,0.93a18.76,18.76,0,1,1-18.76,18.76A18.76,18.76,0,0,1,194.58.93h0Z"/></svg></li>
+                <li><svg class="logo" viewBox="0 0 214 172">
+                        <defs>
+                            <style>
+                                .cls-1 {
+                                    fill: #d40e14;
+                                }
+                            </style>
+                        </defs>
+                        <title>master_PICT_A3CPM</title>
+                        <path class="cls-1"
+                            d="M10.76,48.32H61.32c5,0,8.69,1.57,10.16,8.61,1.63,7.83,1,13.28-7.85,13.9L47.76,72c11.68,73.82,80,97.88,117.18,18.38,6.16-13.16,8.17-15.56,14.91-13.88,9.14,2.27,10.39,7,6,20.24-32.16,98-140.23,107.83-161.43-23.05l-12.89.93c-10.49.75-10.91-8.1-10.91-13,0-9.74,3.61-13.22,10.11-13.22h0Z" />
+                        <path class="cls-1"
+                            d="M194.58,0.93a18.76,18.76,0,1,1-18.76,18.76A18.76,18.76,0,0,1,194.58.93h0Z" />
+                    </svg></li>
                 <li><a href="#"><span class="material-symbols-outlined">sms</span>Service &amp; Contact</a></li>
                 <li><a href="#"><span class="material-symbols-outlined">visibility</span>Recent bekeken</a></li>
                 <li><a href="#"><span class="material-symbols-outlined">favorite</span>Favorieten</a></li>
@@ -25,40 +41,98 @@
     <main>
         <section id="searching">
             <img src="./img/background.jpg" alt="Person chilling in swimmingpool">
+            <div class="search">
+                <ul>
+                    <li><a href="#">Vakanties</a></li>
+                    <li><a href="#">Vliegtickets</a></li>
+                    <li><a href="#">Cruises</a></li>
+                    <li><a href="#">Meer reizen</a></li>
+                </ul>
+                <form>
+                    <div>
+                        <label for="bestemming"><span
+                                class="material-symbols-outlined">location_on</span>Bestemming?</label>
+                        <input type="text" id="bestemming" name="bestemming" placeholder="Vakantie bestemming">
+                    </div>
+                    <div>
+                        <label for="vakantietype"><span
+                                class="material-symbols-outlined">eyeglasses</span>Vakantietype?</label>
+                        <input type="text" id="vakantietype" name="vakantietype" placeholder="Geen voorkeur">
+                    </div>
+                    <div>
+                        <label for="wanneer"><span
+                                class="material-symbols-outlined">calendar_month</span>Wanneer</label>
+                        <input type="text" id="wanneer" name="wanneer" placeholder="Geen voorkeur">
+                    </div>
+                    <div>
+                        <label for="wie"><span class="material-symbols-outlined">person</span>Wie?</label>
+                        <input type="text" id="wie" name="wie" placeholder="2 volwassenen">
+                    </div>
+                    <button type="submit"><span class="material-symbols-outlined">search</span>Zoeken</button>
+                </form>
+
+
+            </div>
         </section>
     </main>
     <footer>
         <nav class="navigation-footer">
             <ul>
-                <li>Hoi</li>
-                <li>Hoi</li>
-                <li>Hoi</li>
-                <li>Hoi</li>
-                <li>Hoi</li>
+                <li><a href="#">TUI Groups &amp; Incentives</a></li>
+                <li><a href="#">Brochures</a></li>
+                <li><a href="#">Verantwoord reizen</a></li>
+                <li><a href="#">Last minute</a></li>
+                <li><a href="#">Actievoorwaarden</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Sitemap</a></li>
+                <li><a href="#">TUI België</a></li>
+            </ul>
+            <ul class="extras">
+                <li><a href="#">TUI App</a></li>
+                <li><a href="#">Online inchecken Transavia</a></li>
+                <li><a href="#">Excursies op de bestemming</a></li>
+                <li><a href="#">Goed voorbereid op reis</a></li>
+                <li><a href="#">Coronamaatregelen</a></li>
+                <li><a href="#">Verzekeringen</a></li>
+                <li><a href="#">Autohuur</a></li>
+                <li><a href="#">Parkeren op de luchthaven</a></li>
+                <li><a href="#">Luchthavenvervoer</a></li>
+                <li><a href="#">Visum &amp; vaccinaties</a></li>
+                <li><a href="#">Bekijk alle extra's</a></li>
             </ul>
             <ul>
-                <li>Doei</li>
-                <li>Doei</li>
-                <li>Doei</li>
-                <li>Doei</li>
-                <li>Doei</li>
+                <li><a href="#">Vliegen met TUI fly</a></li>
+                <li><a href="#">Online inchecken TUI fly</a></li>
+                <li><a href="#">Stoelreservering</a></li>
+                <li><a href="#">Bagage</a></li>
+                <li><a href="#">Bekijk alle TUI fly services</a></li>
+                <li><a href="#">TUI Cargo</a></li>
             </ul>
             <ul>
-                <li>Later</li>
-                <li>Later</li>
-                <li>Later</li>
-                <li>Later</li>
-                <li>Later</li>
+                <li><a href="#">Over TUI Nederland</a></li>
+                <li><a href="#">Pers en media</a></li>
+                <li><a href="#">Voorwaarden</a></li>
+                <li><a href="#">Disclaimer</a></li>
+                <li><a href="#">Copyright</a></li>
+                <li><a href="#">Privacy &amp; cookies</a></li>
+                <li><a href="#">Klacht?</a></li>
+                <li><a href="#">Deel een zorg</a></li>
             </ul>
+            <div>
+                <h2>Nieuwsbrief</h2>
+                <p>Krijg wekelijks de beste deals in je mailbox.</p>
+                <label for="bestemming"><span class="material-symbols-outlined">location_on</span>Bestemming?</label>
+                <input type="text" id="bestemming" name="bestemming" placeholder="Vakantie bestemming">
+            </div>
             <ul>
-                <li>Moet kunnen</li>
-                <li>Moet kunnen</li>
-                <li>Moet kunnen</li>
-                <li>Moet kunnen</li>
-                <li>Moet kunnen</li>
+                <li><img src="./img/nl.png" alt="Thuiswinkel waarborg logo"></li>
+                <li><img src="./img/nl.png" alt="ANVR logo"></li>
+                <li><img src="./img/nl.png" alt="SGR logo"></li>
+                <li><img src="./img/nl.png" alt="World logo"></li>
             </ul>
-            
+
         </nav>
     </footer>
 </body>
+
 </html>
