Logo fixes names

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
                 <article>
                     <div class="overlay-image">
-                        <img class="logo" src="./img/logo1.png" alt="logo">
+                        <img class="logo" src="./img/thelogo1.png" alt="logo">
                         <span class="label">LAST MINUTE!</span>
                         <span class="material-symbols-outlined heart">favorite</span>
                         <div class="circles">
@@ -353,7 +353,7 @@
 
                 <article>
                     <div class="overlay-image">
-                        <!-- <img class="logo" src="./img/logo1.png" alt="logo"> -->
+                        <!-- <img class="logo" src="./img/thelogo1.png" alt="logo"> -->
                         <span class="label">LAST MINUTE!</span>
                         <span class="material-symbols-outlined heart">favorite</span>
                         <div class="circles">
@@ -399,7 +399,7 @@
 
                 <article>
                     <div class="overlay-image">
-                        <img class="logo" src="./img/logo1.png" alt="logo">
+                        <img class="logo" src="./img/thelogo1.png" alt="logo">
                         <span class="label">KASSA KORTING!</span>
                         <span class="material-symbols-outlined heart">favorite</span>
                         <div class="circles">
@@ -442,7 +442,7 @@
                 </article>
                 <article>
                     <div class="overlay-image">
-                        <img class="logo" src="./img/logo1.png" alt="logo">
+                        <img class="logo" src="./img/thelogo1.png" alt="logo">
                         <span class="label">LAST MINUTE!</span>
                         <span class="material-symbols-outlined heart">favorite</span>
                         <div class="circles">
@@ -486,7 +486,7 @@
                 </article>
                 <article>
                     <div class="overlay-image">
-                        <img class="logo" src="./img/logo2.png" alt="logo">
+                        <img class="logo" src="./img/thelogo2.png" alt="logo">
                         <span class="label">LAST MINUTE!</span>
                         <span class="material-symbols-outlined heart">favorite</span>
                         <div class="circles">
@@ -529,7 +529,7 @@
                 </article>
                 <article>
                     <div class="overlay-image">
-                        <img class="logo" src="./img/logo1.png" alt="logo">
+                        <img class="logo" src="./img/thelogo1.png" alt="logo">
                         <span class="label">KASSA KORTING!</span>
                         <span class="material-symbols-outlined heart">favorite</span>
                         <div class="circles">
